--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.strings
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.strings
@@ -2279,3 +2279,83 @@ PropertyNotInitialized(string propertyName) = Property '{0}' was set before init
 # SqlProjects
 
 InvalidDspFormatError(string dsp) = Invalid value for Database Schema Provider: '{0}'; expected to be in the form 'Microsoft.Data.Tools.Schema.Sql.SqlAzureV12DatabaseSchemaProvider'.
+
+#############################################################################
+# Connection Configuration Options
+ConnectionConfigOptions_server_displayName = Server name
+ConnectionConfigOptions_server_description = Name of the SQL Server instance
+ConnectionConfigOptions_database_displayName = Database name
+ConnectionConfigOptions_database_description = The name of the initial catalog or database in the data source
+ConnectionConfigOptions_authenticationType_displayName = Authentication type
+ConnectionConfigOptions_authenticationType_description = Specifies the method of authenticating with SQL Server
+ConnectionConfigOptions_authenticationType_category_SqlLogin = SQL Login
+ConnectionConfigOptions_authenticationType_category_Integrated = Windows Authentication
+ConnectionConfigOptions_authenticationType_category_AzureMFA = Microsoft Entra ID - Universal with MFA support
+ConnectionConfigOptions_user_displayName = User name
+ConnectionConfigOptions_user_description = Indicates the user ID to be used when connecting to the data source
+ConnectionConfigOptions_password_displayName = Password
+ConnectionConfigOptions_password_description = Indicates the password to be used when connecting to the data source
+ConnectionConfigOptions_applicationIntent_displayName = Application intent
+ConnectionConfigOptions_applicationIntent_description = Declares the application workload type when connecting to a server
+ConnectionConfigOptions_applicationIntent_category_ReadWrite = Read/Write
+ConnectionConfigOptions_applicationIntent_category_ReadOnly = Read-Only
+ConnectionConfigOptions_connectTimeout_displayName = Connect timeout
+ConnectionConfigOptions_connectTimeout_description = The length of time (in seconds) to wait for a connection to the server before terminating the attempt and generating an error
+ConnectionConfigOptions_commandTimeout_displayName = Command timeout
+ConnectionConfigOptions_commandTimeout_description = The length of time (in seconds) to wait for a command to complete on the server before terminating the attempt and generating an error
+ConnectionConfigOptions_currentLanguage_displayName = Current language
+ConnectionConfigOptions_currentLanguage_description = The SQL Server language record name
+ConnectionConfigOptions_columnEncryptionSetting_displayName = Always Encrypted
+ConnectionConfigOptions_columnEncryptionSetting_description = Enables or disables Always Encrypted for the connection
+ConnectionConfigOptions_columnEncryptionSetting_category_Disabled = Disabled
+ConnectionConfigOptions_columnEncryptionSetting_category_Enabled = Enabled
+ConnectionConfigOptions_attestationProtocol_displayName = Attestation Protocol
+ConnectionConfigOptions_attestationProtocol_description = Specifies a protocol for attesting a server-side enclave used with Always Encrypted with secure enclaves
+ConnectionConfigOptions_attestationProtocol_category_HGS = Host Guardian Service
+ConnectionConfigOptions_attestationProtocol_category_AAS = Azure Attestation
+ConnectionConfigOptions_enclaveAttestationUrl_displayName = Enclave Attestation URL
+ConnectionConfigOptions_enclaveAttestationUrl_description = Specifies an endpoint for attesting a server-side enclave used with Always Encrypted with secure enclaves
+ConnectionConfigOptions_encrypt_displayName = Encrypt
+ConnectionConfigOptions_encrypt_description = When set, SQL Server uses provided setting for SSL encryption for all data sent between the client and server.
+ConnectionConfigOptions_encrypt_category_Optional = Optional
+ConnectionConfigOptions_encrypt_category_Mandatory = Mandatory
+ConnectionConfigOptions_encrypt_category_Strict = Strict
+ConnectionConfigOptions_persistSecurityInfo_displayName = Persist security info
+ConnectionConfigOptions_persistSecurityInfo_description = When false, security-sensitive information, such as the password, is not returned as part of the connection
+ConnectionConfigOptions_trustServerCertificate_displayName = Trust server certificate
+ConnectionConfigOptions_trustServerCertificate_description = When true (and encrypt=true), SQL Server uses SSL encryption for all data sent between the client and server without validating the server certificate
+ConnectionConfigOptions_hostNameInCertificate_displayName = Host name in certificate
+ConnectionConfigOptions_hostNameInCertificate_description = Specifies host name in certificate to be used for certificate validation, when encryption is enabled.
+ConnectionConfigOptions_attachedDBFileName_displayName = Attached DB file name
+ConnectionConfigOptions_attachedDBFileName_description = The name of the primary file, including the full path name, of an attachable database
+ConnectionConfigOptions_contextConnection_displayName = Context connection
+ConnectionConfigOptions_contextConnection_description = When true, indicates the connection should be from the SQL server context. Available only when running in the SQL Server process
+ConnectionConfigOptions_port_displayName = Port
+ConnectionConfigOptions_connectRetryCount_displayName = Connect retry count
+ConnectionConfigOptions_connectRetryCount_description = Number of attempts to restore connection
+ConnectionConfigOptions_connectRetryInterval_displayName = Connect retry interval
+ConnectionConfigOptions_connectRetryInterval_description = Delay between attempts to restore connection
+ConnectionConfigOptions_applicationName_displayName = Application name
+ConnectionConfigOptions_applicationName_description = The name of the application
+ConnectionConfigOptions_workstationId_displayName = Workstation Id
+ConnectionConfigOptions_workstationId_description = The name of the workstation connecting to SQL Server
+ConnectionConfigOptions_pooling_displayName = Pooling
+ConnectionConfigOptions_pooling_description = When true, the connection object is drawn from the appropriate pool, or if necessary, is created and added to the appropriate pool
+ConnectionConfigOptions_maxPoolSize_displayName = Max pool size
+ConnectionConfigOptions_maxPoolSize_description = The maximum number of connections allowed in the pool
+ConnectionConfigOptions_minPoolSize_displayName = Min pool size
+ConnectionConfigOptions_minPoolSize_description = The minimum number of connections allowed in the pool
+ConnectionConfigOptions_loadBalanceTimeout_displayName = Load balance timeout
+ConnectionConfigOptions_loadBalanceTimeout_description = The minimum amount of time (in seconds) for this connection to live in the pool before being destroyed
+ConnectionConfigOptions_replication_displayName = Replication
+ConnectionConfigOptions_replication_description = Used by SQL Server in Replication
+ConnectionConfigOptions_attachDbFilename_displayName = Attach DB filename
+ConnectionConfigOptions_failoverPartner_displayName = Failover partner
+ConnectionConfigOptions_failoverPartner_description = the name or network address of the instance of SQL Server that acts as a failover partner
+ConnectionConfigOptions_multiSubnetFailover_displayName = Multi subnet failover
+ConnectionConfigOptions_multipleActiveResultSets_displayName = Multiple active result sets
+ConnectionConfigOptions_multipleActiveResultSets_description = When true, multiple result sets can be returned and read from one connection
+ConnectionConfigOptions_packetSize_displayName = Packet size
+ConnectionConfigOptions_packetSize_description = Size in bytes of the network packets used to communicate with an instance of SQL Server
+ConnectionConfigOptions_typeSystemVersion_displayName = Type system version
+ConnectionConfigOptions_typeSystemVersion_description = Indicates which server type system then provider will expose through the DataReader
