--- a/src/Microsoft.SqlTools.SqlCore/Localization/sr.strings
+++ b/src/Microsoft.SqlTools.SqlCore/Localization/sr.strings
@@ -532,7 +532,7 @@ GeneratedAlwaysColumnType_TransactionIdStart = Transaction Id Start
 GeneratedAlwaysColumnType_TransactionIdEnd = Transaction Id End
 GeneratedAlwaysColumnType_SequenceNumberStart = Sequence Number Start
 GeneratedAlwaysColumnType_SequenceNumberEnd = Sequence Number End
-TableDesignerIsSystemVersioningEnabledTitle = System Versioning Enabled
+TableDesignerIsSystemVersioningTitle = System Versioning
 TableDesignerIsSystemVersioningEnabledDescription = Specifies whether the table is system versioning enabled.
 TableDesignerSystemVersioningGroupTitle = System Versioning
 TableDesignerHistoryTableDescription = History table of the current table.
