--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.strings
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.strings
@@ -2316,6 +2316,10 @@ ConnectionConfigOptions_columnEncryptionSetting_displayName = Always Encrypted
 ConnectionConfigOptions_columnEncryptionSetting_description = Enables or disables Always Encrypted for the connection
 ConnectionConfigOptions_columnEncryptionSetting_category_Disabled = Disabled
 ConnectionConfigOptions_columnEncryptionSetting_category_Enabled = Enabled
+ConnectionConfigOptions_secureEnclaves_displayName = Secure Enclaves
+ConnectionConfigOptions_secureEnclaves_description = Enables or disables Secure Enclaves for the connection
+ConnectionConfigOptions_secureEnclaves_category_Disabled = Disabled
+ConnectionConfigOptions_secureEnclaves_category_Enabled = Enabled
 ConnectionConfigOptions_attestationProtocol_displayName = Attestation Protocol
 ConnectionConfigOptions_attestationProtocol_description = Specifies a protocol for attesting a server-side enclave used with Always Encrypted with secure enclaves
 ConnectionConfigOptions_attestationProtocol_category_HGS = Host Guardian Service
