--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.xlf
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.xlf
@@ -7023,6 +7023,26 @@ The Query Processor estimates that implementing the following index could improv
         <target state="new">Data Source &amp; Context</target>
         <note></note>
       </trans-unit>
+      <trans-unit id="ConnectionConfigOptions_secureEnclaves_displayName">
+        <source>Secure Enclaves</source>
+        <target state="new">Secure Enclaves</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ConnectionConfigOptions_secureEnclaves_description">
+        <source>Enables or disables Secure Enclaves for the connection</source>
+        <target state="new">Enables or disables Secure Enclaves for the connection</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ConnectionConfigOptions_secureEnclaves_category_Disabled">
+        <source>Disabled</source>
+        <target state="new">Disabled</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="ConnectionConfigOptions_secureEnclaves_category_Enabled">
+        <source>Enabled</source>
+        <target state="new">Enabled</target>
+        <note></note>
+      </trans-unit>
     </body>
   </file>
 </xliff>
