--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.xlf
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.xlf
@@ -7024,8 +7024,8 @@ The Query Processor estimates that implementing the following index could improv
         <note></note>
       </trans-unit>
       <trans-unit id="ConnectionConfigOptions_common_category_Enabled">
-        <source>Disabled</source>
-        <target state="new">Disabled</target>
+        <source>Enabled</source>
+        <target state="new">Enabled</target>
         <note></note>
       </trans-unit>
       <trans-unit id="ConnectionConfigOptions_common_category_Disabled">
