--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.strings
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.strings
@@ -2323,6 +2323,7 @@ ConnectionConfigOptions_attestationProtocol_displayName = Attestation Protocol
 ConnectionConfigOptions_attestationProtocol_description = Specifies a protocol for attesting a server-side enclave used with Always Encrypted with secure enclaves
 ConnectionConfigOptions_attestationProtocol_category_HGS = Host Guardian Service
 ConnectionConfigOptions_attestationProtocol_category_AAS = Azure Attestation
+ConnectionConfigOptions_attestationProtocol_category_None = None
 ConnectionConfigOptions_enclaveAttestationUrl_displayName = Enclave Attestation URL
 ConnectionConfigOptions_enclaveAttestationUrl_description = Specifies an endpoint for attesting a server-side enclave used with Always Encrypted with secure enclaves
 ConnectionConfigOptions_encrypt_displayName = Encrypt
